# cmake-workshop

01-HelloWorld/: CMakeLists.txt  helloworld.cpp
01-HelloWorld/solution/: CMakeLists.txt
02-SimpleLibrary/: CMakeLists.txt  hellolib.cpp  helloworld.cpp
02-SimpleLibrary/solution/: CMakeLists.txt
03-ModernLibrary/: CMakeLists.txt
03-ModernLibrary/mybin/: mybin.cpp
03-ModernLibrary/mylib/include/mylib/: mylib.h
03-ModernLibrary/mylib/src/: mylib.cpp
03-ModernLibrary/mylib/src/impl/: mylib_impl.cpp  mylib_impl.h
03-ModernLibrary/solution/: CMakeLists.txt  mybin_CMakeLists.txt  mylib_CMakeLists.txt
04-Fizzbuzz/: fizzbuzz.cmake
04-Fizzbuzz/solution/: fizzbuzz.cmake
05-Testing/: CMakeLists.txt  failing.cpp  passing.cpp
05-Testing/solution/: CMakeLists.txt
06-GeneratorExpressions/: CMakeLists.txt  mylib.h
06-GeneratorExpressions/solution/: CMakeLists.txt
07-FindTargets/: CMakeLists.txt
07-FindTargets/bin1/: CMakeLists.txt
07-FindTargets/lib2/: CMakeLists.txt
07-FindTargets/lib3/: CMakeLists.txt
07-FindTargets/lib4/: CMakeLists.txt
07-FindTargets/lib5/: CMakeLists.txt
07-FindTargets/lib6/: lib6.cpp
07-FindTargets/lib7/: CMakeLists.txt  lib7.cpp
07-FindTargets/lib8/: lib8.cpp
07-FindTargets/solution/: CMakeLists.txt
08-CycleDetection/: CMakeLists.txt
08-CycleDetection/lib1/: CMakeLists.txt  lib1.cpp
08-CycleDetection/lib2/: lib2.cpp
08-CycleDetection/lib3/: lib3.cpp
08-CycleDetection/lib4/: lib4.cpp
08-CycleDetection/lib5/: lib5.cpp
08-CycleDetection/lib6/: CMakeLists.txt
08-CycleDetection/lib8/: CMakeLists.txt
08-CycleDetection/solution/: CMakeLists.txt
